Renamed fragment_donation to dialog_fragment_donation. Other misc tweaks.

--- a/Squelch/Squelch.csproj
+++ b/Squelch/Squelch.csproj
@@ -491,7 +491,7 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\fragment_donation.xml">
+    <AndroidResource Include="Resources\layout\dialog_fragment_donation.xml">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
     </AndroidResource>
