--- a/Squelch/Squelch.csproj
+++ b/Squelch/Squelch.csproj
@@ -62,6 +62,9 @@
     <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="library-mpandroidchart">
+      <HintPath>..\library-mpandroidchart\bin\Release\library-mpandroidchart.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -511,6 +514,7 @@
   <ItemGroup>
     <AndroidResource Include="Resources\layout\fragment_statistics.xml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
