Tinkering with build settings

--- a/squelch/squelch.csproj
+++ b/squelch/squelch.csproj
@@ -74,6 +74,7 @@
     <AndroidSigningStorePass>squelch</AndroidSigningStorePass>
     <AndroidSigningKeyAlias>squelch</AndroidSigningKeyAlias>
     <AndroidSigningKeyPass>squelch</AndroidSigningKeyPass>
+    <AndroidPackageFormat>apk</AndroidPackageFormat>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="library-mpandroidchart">
