--- a/squelch/Properties/AndroidManifest.xml
+++ b/squelch/Properties/AndroidManifest.xml
@@ -6,5 +6,5 @@
 	<uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" android:required="true" tools:ignore="ProtectedPermissions" />
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" android:required="true" tools:ignore="ProtectedPermissions" />
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" android:required="true" />
-	<application android:allowBackup="false" android:fullBackupContent="false" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme" android:icon="@mipmap/ic_launcher"></application>
+	<application android:allowBackup="false" android:fullBackupContent="false" android:label="@string/text_app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme" android:icon="@mipmap/ic_launcher"></application>
 </manifest>
