Added new hindi strings translations and modified the MainActivity's OnPostResume method to only start the enforcer after first time setup

--- a/squelch/squelch.csproj
+++ b/squelch/squelch.csproj
@@ -533,10 +533,10 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\values-es\strings.xml">
+    <TransformFile Include="Resources\values-hi\strings.xml">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
-    </AndroidResource>
+    </TransformFile>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\dialog_generic_combo_input.xml">
