Added dummy spanish strings file (cause my phone doesn't support Hindi). Modified the BlackoutSetupFragment to no longer parse label text to datetime and instead use instance variables.

--- a/squelch/squelch.csproj
+++ b/squelch/squelch.csproj
@@ -533,13 +533,19 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <TransformFile Include="Resources\values-hi\strings.xml">
+    <AndroidResource Include="Resources\values-hi\strings.xml">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
-    </TransformFile>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\dialog_generic_combo_input.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values-es\strings.xml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
