--- a/squelch/Properties/AndroidManifest.xml
+++ b/squelch/Properties/AndroidManifest.xml
@@ -8,5 +8,6 @@
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" android:required="true" />
 	<application android:allowBackup="false" android:fullBackupContent="false" android:label="@string/text_app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme" android:icon="@mipmap/ic_launcher">
     <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
+    <meta-data android:name="firebase_performance_logcat_enabled" android:value="false" />
   </application>
 </manifest>
