--- a/squelch/squelch.csproj
+++ b/squelch/squelch.csproj
@@ -167,6 +167,9 @@
     <PackageReference Include="Xamarin.Firebase.Crashlytics">
       <Version>118.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Firebase.Perf">
+      <Version>120.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Google.Android.Material" Version="1.4.0" />
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.Core.Utils" Version="1.0.0.7" />
     <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.3.0.5" />
