--- a/squelch/Properties/AndroidManifest.xml
+++ b/squelch/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:versionCode="141" android:versionName="1.4.1" package="com.squelch.android" android:installLocation="internalOnly">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:versionCode="150" android:versionName="1.5.0" package="com.squelch.android" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="29" />
 	<uses-permission android:name="android.permission.INTERNET" android:required="true" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" android:required="true" />
@@ -7,7 +7,7 @@
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" android:required="true" tools:ignore="ProtectedPermissions" />
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" android:required="true" />
 	<application android:allowBackup="false" android:fullBackupContent="false" android:label="@string/text_app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme" android:icon="@mipmap/ic_launcher">
-    <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
-    <meta-data android:name="firebase_performance_logcat_enabled" android:value="false" />
-  </application>
+		<meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
+		<meta-data android:name="firebase_performance_logcat_enabled" android:value="false" />
+	</application>
 </manifest>
